--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,10 @@
 <div id="columns">
 <div id="side">
 <ul>
-<li><a href="http://www....">Home</a></li>
-<li><a href="http://www..../faq">Questions</a></li>
-<li><a href="http://www..../news">News</a></li>
-<li><a href="http://www..../contact">Contact</a></li>
+<li><a href="http://www....">Inicio</a></li>
+<li><a href="http://www..../faq">Preguntas</a></li>
+<li><a href="http://www..../news">Noticias</a></li>
+<li><a href="http://www..../contact">Contacto</a></li>
 </ul>
 </div>
 <div id="main">
